# RP_ICP_LOCALIZATION

./: CMakeLists.txt  README.md  launch_file.launch  package.xml
exercise/: CMakeLists.txt
exercise/src/: localizer2d.cpp
include/: localizer2d.h  ros_bridge.h
src/: localizer2d.cpp  ros_bridge.cpp
test_data/: rviz.rviz
